fix bustage from bug 361299